--- a/src/components/infiiniteScroll/InfiniteScroll.css
+++ b/src/components/infiiniteScroll/InfiniteScroll.css
@@ -1,9 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.page-title {
+  text-align: center;
+  margin: 20px;
 }
-
 .container {
   position: relative;
   display: flex;
@@ -11,14 +9,15 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 20px;
+  padding: 20px;
 
   .card {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 300px;
-    height: 400px;
+    width: 250px;
+    height: 200px;
     overflow: hidden;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
@@ -38,7 +37,7 @@
         transform: translateY(0px);
         opacity: 1;
         border: 1px solid #867cc1;
-        padding: 10px;
+        padding: 5px;
         border-radius: 10px;
     }
 
@@ -56,9 +55,9 @@
 
     .content-container {
       position: absolute;
-      bottom: -160px;
+      bottom: -135px;
       width: 100%;
-      height: 160px;
+      height: 125px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -78,7 +77,7 @@
         font-weight: bold;
         font-size: 18px;
         text-align: center;
-        margin: 20px 0 15px;
+        margin: 10px 0 5px;
         line-height: 1.1em;
         transition: 0.5s;
         opacity: 0;
